优化页面布局：增加内容区域宽度，扩大左侧导航栏，修复测试报告布局与图标问题

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                                 <button data-score="3">3</button>
                                 <button data-score="4">4</button>
                                 <button data-score="5">5</button>
+                                <button data-score="0" class="abandon-button">放弃测试</button>
                             </div>
                             <div class="notes-input">
                                 <label for="observation-notes">观察笔记：</label>
@@ -157,7 +158,9 @@
                             <thead>
                                 <tr>
                                     <th>测试卡ID</th>
+                                    <th>测试用例名称</th>
                                     <th>评分</th>
+                                    <th>评分标准描述</th>
                                     <th>观察笔记</th>
                                 </tr>
                             </thead>
